More modifications and testing